--- a/Calendrier/Calendrier.csproj
+++ b/Calendrier/Calendrier.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\Images\Icons\Avatar\" />
+    <Folder Include="wwwroot\Images\Captures\" />
   </ItemGroup>
 
 </Project>
